--- a/mrate-client/package.json
+++ b/mrate-client/package.json
@@ -46,6 +46,7 @@
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.503.0",
+    "moment": "^2.30.1",
     "next": "15.3.0",
     "next-nprogress-bar": "^2.4.7",
     "next-pwa": "^5.6.0",
