--- a/mrate-client/package.json
+++ b/mrate-client/package.json
@@ -52,6 +52,7 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
+    "react-custom-roulette": "^1.4.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.1",
